updates to rmd1 files

--- a/Module2_rmd1.Rmd
+++ b/Module2_rmd1.Rmd
@@ -3,8 +3,8 @@ title: "Module2 - RMarkdown Document 1"
 author: "DGiannis"
 date: "November 18, 2020"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
   word_document: default
 ---
 
@@ -99,12 +99,6 @@ Here is an example of code in a blockquote:
 
 
 
-
-
-
-
-
-
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
@@ -122,3 +116,38 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+
+
+
+
+```{r pressure2, fig.width=5, fig.height=5, echo=FALSE}
+plot(pressure)
+```
+
+
+
+## Insert Tables
+
+```{r}
+knitr::kable(head(cars),
+            caption = "Top 6 rows of cars dataset")
+```
+
+
+
+## Insert an Equation
+
+$$ Y= \beta_0 + \beta_1x   $$ 
+
+
+
+
+
+
+
+
+
+
+
